--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,14 @@
 ---
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
+---
+---
 
-@import
-  "minima/skins/{{ site.minima.skin | default: 'classic' }}",
-  "minima/initialize";
+@import 'jekyll-theme-dinky';
+
+table img {
+  margin: 0px;
+  border: 0px;
+  vertical-align: text-bottom;
+  padding: 0px;
+}
