--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,9 @@
 	<h1 class="header">{{ site.title | default: site.github.repository_name }}</h1>
         <p class="header">{{ site.description | default: site.github.project_tagline }}</p>
 	-->
+	<a href="https://epcced.github.io/fulhame-docs"> <img alt="" src="assets/images/ElizabethFulhameCrop.jpg" style="border: none; display: block" width="140"> </a>
 	
-	<span style="color:white; font-size: 18px;">Help</span>  
+	<!-- <span style="color:white; font-size: 18px;">Help</span>  -->
         <ul>
             {% for item in site.data.sidebar.docs %}
               <li><a href="{{ item.url }}">{{ item.title }}</a></li>
@@ -38,10 +39,12 @@
           <li><a class="buttons github" href="{{ site.github.repository_url }}">View On GitHub</a></li>
         </ul>
 
+	<!--
         {% if site.github.is_project_page %}
           <p class="header">This project is maintained by <a class="header name" href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
-
+	  -->
+	  
         {% if site.github.is_user_page %}
           <ul>
             <li><a class="buttons github" href="{{ site.github.owner_url }}">GitHub Profile</a></li>
@@ -54,7 +57,7 @@
       </section>
 
       <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+        <!-- <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p> -->
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
